# vincent-cordola-bthesis-p2p_dataset_federation

./: .gitignore  PROJECT_MANAGEMENT.md  README.md
doc/: axum_http_server.md  dataset_layout_conventions.md  evaluation.md  installation.md  nice_to_have.md  python_client_layer.md  system_architecture.md
doc/archive/: PROJECT_MANAGEMENT.md  README.md  iroh_setup_guide.md  iroh_steup_guide.md
doc/media/: architecture_p2p(1).drawio  global_topology-p2p_dataset_federation.drawio  system_architecture(8).drawio
peer-dataset-federation/client/: demo.ipynb  requirements.txt  test_client.py
peer-dataset-federation/client/p2p/: client.py  dataset.py
peer-dataset-federation/doc/: axum_http_server.md
peer-dataset-federation/node/: Cargo.toml
peer-dataset-federation/node/cache/: 3b9de451872ec4a1.parquet
peer-dataset-federation/node/data/: sample.parquet
peer-dataset-federation/node/data/peers_manifest/: README.md  dataset_layout_conventions.md  mtl.json  peer1.json
peer-dataset-federation/node/src/: api.rs  main.rs  node.rs
peer-dataset-federation/testbed/: docker-compose.yml
rust-mvp/: installation_guide.md
rust-mvp-iroh-network/: installation_guide.md  iroh_setup_guide.md
rust-mvp-iroh-network/docker-testbed/: Cargo.toml  Dockerfile  docker-compose.yml
rust-mvp-iroh-network/docker-testbed/src/: main.rs  node.rs
rust-mvp-iroh-network/rust-mvp/: Cargo.toml
rust-mvp-iroh-network/rust-mvp/src/: main.rs  manifest.rs  node.rs
rust-mvp/rust-mvp/: Cargo.toml
rust-mvp/rust-mvp/src/: main.rs  node.rs
(+3 files in other folders)
