[package]
name = "rust-mvp"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = "0.98.2"
iroh-blobs = "0.100.0"
iroh-gossip = "0.98"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
n0-error = "0.1"
n0-future = "0.3"
tracing-subscriber = "0.3"
futures = "0.3"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
parquet = {version = "59", default-features = false}